[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survey_processing"
version = "0.1.0"
description = "A Databricks bundle for processing survey data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pandas>=2.0.0",
    "pyspark>=3.4.0",
    "pyyaml>=6.0",
    "databricks-sdk>=0.8.0",
    "delta-spark>=2.4.0",
    "pytest>=7.0.0",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[project.scripts]
survey-process = "survey_processing.main:main"
